package bigtalkdesignMod.v17.v17_2;

public class Adaptee {
    public void specificRequest() {
        System.out.println("特殊请求!");
    }
}
