package bigtalkdesignMod.v17.v17_2;

public class Target {
    public void request() {
        System.out.println("普通请求!");
    }

}
